@@ -1,0 +1,51 @@
+use strict;
+use warnings;
+no if "$]" >= 5.031009, feature => 'indirect';
+use utf8;
+use open ':std', ':encoding(UTF-8)'; # force stdin, stdout, stderr into utf8
+
+use Test::More 0.96;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
+use Test::Deep;
+use Test::Fatal;
+use JSON::Schema::Draft201909;
+
+my $js = JSON::Schema::Draft201909->new;
+
+my $tests = sub {
+  my ($char, $test_substr) = @_;
+
+  cmp_deeply(
+    $js->evaluate($char, { pattern => '[a-z]' })->TO_JSON,
+    {
+      valid => bool(0),
+      errors => [
+        {
+          instanceLocation => '',
+          keywordLocation => '/pattern',
+          error => 'pattern does not match',
+        },
+      ],
+    },
+    $test_substr.' LATIN SMALL LETTER E WITH ACUTE does not match the ascii range [a-z]',
+  );
+
+  cmp_deeply(
+    $js->evaluate($char, { pattern => '\w' })->TO_JSON,
+    {
+      valid => bool(1),
+    },
+    $test_substr.' LATIN SMALL LETTER E WITH ACUTE does match the "word" character class, because unicode semantics are used for matching',
+  );
+};
+
+my $letter = "é";
+$tests->($letter, 'unchanged');
+
+utf8::upgrade($letter);
+$tests->($letter, 'upgraded');
+
+utf8::downgrade($letter);
+$tests->($letter, 'downgraded');
+
+done_testing;
